# slack-irc-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  example_config.toml
.github/workflows/: ci.yml
src/: main.rs
