[package]
name = "slack_irc_rust"
version = "0.1.0"
authors = ["Erik <erikdesjardins@users.noreply.github.com>"]

[dependencies]
futures = "0.1"
irc = "0.11"
hyper = "0.9"
slack = "0.16"
lazy_static = "0.2"
regex = "0.1"
toml = "0.2"
rustc-serialize = "0.3"
log = "0.3"
multimap = "0.3"
time = "0.1"
